Fix buttons being active when necessary (#38)
* Updated Client.Status to better reflect possibilities
* Updated how client status is calculated during UI initialization
* refactor: extract ClientStatus into a first-level class for testability
* refactor: add DevFlags processing to GuiCommand for testing